map-tools, etc.

--- a/src/main.css
+++ b/src/main.css
@@ -11,29 +11,16 @@ html {
 body {
   font-size: 1.8rem;
   font-family: sans-serif;
+
   background-color: hsl(0, 0%, 88%);
   color: hsl(0, 0%, 8%);
 }
 
-.container {
-  max-width: 70rem;
-  min-height: 100vh;
-  margin: 0 auto;
-  padding: 0 2rem;
-  border-left: hsl(0, 0%, 45%) dotted 1px;
-  border-right: hsl(0, 0%, 45%) dotted 1px;
-  
-}
-
-.link {
-  color: inherit;
-  text-decoration: none;
-  border-bottom: hsl(0, 0%, 8%) solid 1px;
-}
-
-.link:hover {
-  border-bottom: none;
-}
+/* ************************** */
+/* For Pages (not Dashboard) */
+/* ************************ */
+/* *********************** */
+/* ********************** */
 
 header {
   margin-bottom: 6rem;
@@ -45,16 +32,16 @@ header {
   align-items: baseline;
 }
 
-h1 {
-  font-size: 4.8rem;
+footer {
+  font-size: 1.2rem;
 }
-
-/* h1 .link {
-  border-bottom: none;
-} */
 
 main {
   margin-bottom: 6rem;
+}
+
+h1 {
+  font-size: 4.8rem;
 }
 
 h2 {
@@ -66,12 +53,31 @@ p {
   margin-bottom: 2.4rem;
 }
 
-footer {
-  font-size: 1.2rem;
+/* Limit content width and center in window */
+.container {
+  max-width: 70rem;
+  margin: 0 auto;
+  
+  padding: 0 2rem;
+
+  min-height: 100vh;
+  border-left: hsl(0, 0%, 45%) dotted 1px;
+  border-right: hsl(0, 0%, 45%) dotted 1px;
+  
 }
 
-/* AUTH FORMS */
+/* react-router-dom <Link /> */
+.link {
+  color: inherit;
+  text-decoration: none;
+  border-bottom: hsl(0, 0%, 8%) solid 1px;
+}
+.link:hover {
+  border-bottom: none;
+}
 
+
+/* auth forms */
 .auth-form {
   display: flex;
   flex-direction: column;
@@ -112,8 +118,28 @@ footer {
   background-color: hsl(0, 0%, 18%);
 }
 
-/* ******************* */
-/* DASHBOARD */
+/* ************************* */
+/* For Dashboard components */
+/* *********************** */
+/* ********************** */
+/* ********************* */
+
+ul {
+  list-style: none;
+  padding-left: 1.2rem;
+  margin-bottom: 1.2rem;
+}
+
+li {
+  margin-bottom: 1.2rem;
+}
+
+li:hover {
+  cursor: pointer;
+  color: #FFF;
+}
+
+/* set content dimensions to fit window */
 .dashboard {
   width: 100vw;
   height: 100vh;
@@ -124,13 +150,11 @@ footer {
   color: hsl(0, 0%, 88%);
 }
 
-/* MAIN-PANEL */
 .main-panel {
   width: 75vw;
   height: 100vh;
 }
 
-/* QUARTER-PANEL */
 .quarter-panel {
   width: 25vw;
   height: 100vh;
@@ -139,12 +163,14 @@ footer {
   flex-direction: column;
   justify-content: space-between;
 
+  padding-left: 1.2rem;
   border-left: hsl(0, 0%, 45%) 1px dotted;
 }
 
-/* TABS */
+/* tabs */
 .panel-tabs {
   display: flex;
+  padding-top: 1.2rem;
 }
 
 .tab {
@@ -164,28 +190,95 @@ footer {
   background-color: rgb(96, 0, 0);
 }
 
-/* PANEL */
+/* set scrollbar in panel */
 .panel {
   overflow-y: scroll;
+  height: 100%;
 }
 
-/* OPTIONS */
-.options ul {
-  list-style: none;
-  padding-left: 1.2rem;
+/* tools */
+.tool-box {
+  display: flex;
+  flex-direction: column;
 }
 
-.options li:hover {
+.tool {
+  border: none;
+  background: none;
+  font-family: inherit;
+  font-size: inherit;
+  color: hsl(0, 0%, 88%);
+
+  max-width: fit-content;
+  padding: 0 1.2rem;
+  border-radius: 3px;
+  margin-bottom: 1.2rem;
+}
+.tool:hover {
   cursor: pointer;
+  color: #FFF;
+}
+.tool-active {
+  background-color: rgb(96, 0, 0);
 }
 
+h3 {
+  font-size: inherit;
+  letter-spacing: 2px;
+}
+
+.tools-heading {
+  display: flex;
+  justify-content: space-between;
+
+  margin-bottom: 2.4rem;
+}
+
+.tools-body {
+  display: flex;
+  flex-direction: column;
+  height: 80vh;
+  justify-content: space-between;
+}
+
+.text-input {
+  border: none;
+  font-family: inherit;
+  background-color: hsla(0, 0%, 88%, 0.116);
+
+  height: 2.4rem;
+  width: 100%;
+
+  margin-right: 1.2rem;
+}
+
+.text-input:focus {
+  outline: none;
+  background-color: hsla(0, 0%, 88%, 0.651);
+}
+
+.text-form {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+
+  padding-right: 1.2rem;
+}
+
+/* options pseudo links */
 .options-link {
   font-size: 1.2rem;
   border-bottom: hsl(0, 0%, 88%) solid 1px;
 }
-
 .options-link:hover {
   cursor: pointer;
   color: #FFF;
   border-bottom: none;
+}
+
+.canvas-updater {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgb(96, 0, 0);
 }
