--- a/src/main.css
+++ b/src/main.css
@@ -40,6 +40,7 @@ body {
   font-family: inherit;
   font-size: inherit;
   color: hsl(0, 0%, 88%);
+  width: fit-content;
 }
 
 .btn:hover {
@@ -277,7 +278,6 @@ ul {
   align-items: baseline;
 
 }
-
 
 
 .capstone-info {
