--- a/src/main.css
+++ b/src/main.css
@@ -33,6 +33,9 @@ body {
 .mb36 {
   margin-bottom: 3.6rem;
 }
+.ml6 {
+  margin-left: 0.6rem;
+}
 
 .btn {
   background: none;
@@ -63,6 +66,10 @@ body {
   margin-right: 1.2rem;
 }
 
+.small {
+  font-size: 1.2rem;
+}
+
 
 /* *************** */
 /*  HTML elements */
@@ -89,20 +96,20 @@ main {
 
 h1 {
   font-size: 4.8rem;
-  font-family: monospace;
+  font-weight: 700;
 }
 
 h2 {
   font-size: 2.4rem;
+  font-weight: 700;
   margin-bottom: 2.4rem;
-  font-family: monospace;
 }
 
 h3 {
-  font-weight: 500;
+  font-weight: 700;
   font-size: inherit;
-  font-family: monospace;
   letter-spacing: 2px;
+  margin-bottom: 0.6rem;
 }
 
 h4 {
@@ -118,6 +125,12 @@ ul {
   list-style: none;
 }
 
+ol {
+  margin-bottom: 2.4rem;
+  padding: 0 3.2rem;
+  border-left: hsl(0, 0%, 18%) solid 6px;
+}
+
 /* Limit content width and center in window */
 .container {
   max-width: 70rem;
@@ -131,14 +144,17 @@ ul {
   
 }
 
+
 /* react-router-dom <Link /> */
 .link {
   color: inherit;
   text-decoration: none;
-  border-bottom: hsl(0, 0%, 8%) solid 1px;
+  border-bottom: hsl(0, 0%, 8%) dotted 1px;
+
 }
 .link:hover {
-  border-bottom: none;
+  border-bottom: hsl(0, 0%, 8%) solid 3px;
+
 }
 
 
@@ -204,6 +220,11 @@ ul {
   padding: 0.3rem 1.2rem;
 }
 
+.inactive {
+  pointer-events: none;
+  background-color: hsl(0, 0%, 45%);
+}
+
 /* ************************* */
 /* For Dashboard components */
 /* *********************** */
@@ -238,11 +259,44 @@ ul {
   border-left: hsl(0, 0%, 45%) 1px dotted;
 }
 
+
+.capstone-info {
+  max-width: 70rem;
+  margin: 0 auto;
+  
+  padding: 0 2rem;
+
+  min-height: 100vh;
+
+}
+
 /* set scrollbar in panel */
 .panel {
   overflow-y: scroll;
   height: 100%;
   padding-right: 1.2rem;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 1.8rem;
+}
+
+/* track */
+::-webkit-scrollbar-track {
+  background: hsl(0, 0%, 8%);
+}
+
+/* handle */
+::-webkit-scrollbar-thumb {
+  background: hsl(0, 0%, 18%);
+  border-radius: 1.8rem;
+}
+
+/* handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: hsl(0, 0%, 4%);
+  cursor: pointer;
 }
 
 /* tabs (pseudo-links) */
@@ -264,6 +318,22 @@ ul {
   display: flex;
   flex-direction: column;
   gap: 0.6rem;
+  padding: 0.6rem;
+}
+
+.tool-box-border {
+  border: hsl(0, 0%, 45%) 1px dotted;
+}
+
+.tb-header {
+  font-size: 1.2rem;
+  font-weight: 700;
+  margin-top: -1.6rem;
+}
+
+.tb-heading {
+  background-color: hsl(0, 0%, 8%);
+  padding: 0 0.6rem;
 }
 
 /* button selecting */
@@ -313,9 +383,7 @@ ul {
   margin: 10rem auto 0 auto;
 }
 
-.capstone-info {
-  border: none;
-}
+
 
 
 
