--- a/src/main.css
+++ b/src/main.css
@@ -21,6 +21,13 @@ body {
 .flex-space-between {
   display: flex;
   justify-content: space-between;
+  /* align-items: baseline; */
+}
+
+.flex-with-gap {
+  display: flex;
+  gap: 1rem;
+  /* align-items: baseline; */
 }
 
 .mb12 {
@@ -46,6 +53,7 @@ body {
   padding: 0 1rem 0 1rem;
   
   border: solid #141414 1px;
+  border-radius: 3px;
   background-color: black;
 }
 
@@ -129,6 +137,43 @@ ol {
   margin-bottom: 2.4rem;
   padding: 0 3.2rem;
   border-left: hsl(0, 0%, 18%) solid 6px;
+}
+
+svg {
+  display: inline-block;
+  height: 2.4rem;
+  width: 2.4rem;
+}
+
+.svg-large {
+  width: 3.2rem;
+  height: 3.2rem;
+}
+
+.svg-btn {
+  background: none;
+  border: none;
+  font-family: inherit;
+  font-size: inherit;
+  color: hsl(0, 0%, 88%);
+  width: 2.4rem;
+  height: 2.4rem;
+
+}
+
+.svg-btn:hover {
+  cursor: pointer;
+  color: rgba(255, 217, 0, 0.88);
+}
+
+.edit:hover {
+  color: blueviolet;
+}
+.confirm:hover {
+  color: green;
+}
+.cancel:hover {
+  color: darkred;
 }
 
 /* Limit content width and center in window */
@@ -323,6 +368,7 @@ ol {
 
 .tool-box-border {
   border: hsl(0, 0%, 45%) 1px dotted;
+  border-radius: 3px;
 }
 
 .tb-header {
@@ -339,6 +385,13 @@ ol {
 /* button selecting */
 .active {
   background-color: #600000;
+}
+
+.tool-description-box {
+  line-height: 1.2rem;
+  font-size: 1.2rem;
+  font-style: italic;
+  margin: 0 0 1rem 0;
 }
 
 /* text input */
