--- a/src/main.css
+++ b/src/main.css
@@ -43,6 +43,9 @@ body {
 .ml6 {
   margin-left: 0.6rem;
 }
+.ml10 {
+  margin-left: 1rem;
+}
 
 .btn {
   background: none;
@@ -76,6 +79,7 @@ body {
 
 .small {
   font-size: 1.2rem;
+  font-weight: 500;
 }
 
 
@@ -268,6 +272,21 @@ svg {
 .inactive {
   pointer-events: none;
   background-color: hsl(0, 0%, 45%);
+}
+
+
+/* FOR LANDING PAGE SPECS */
+.a-bold:link, .a-bold:visited {
+  color: inherit;
+  text-decoration: none;
+  font-weight: 500;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.8rem;
+  border-radius: 3px;
+}
+
+.a-bold:hover, .a-bold:active {
+  background-color: #ffd700;
 }
 
 /* ************************* */
