--- a/src/main.css
+++ b/src/main.css
@@ -47,6 +47,10 @@ body {
   margin-left: 1rem;
 }
 
+.mt12 {
+  margin-top: 1.2rem;
+}
+
 .btn {
   background: none;
   font-family: inherit;
@@ -324,7 +328,6 @@ svg {
   border-left: hsl(0, 0%, 45%) 1px dotted;
 }
 
-
 .capstone-info {
   max-width: 70rem;
   margin: 0 auto;
@@ -332,7 +335,6 @@ svg {
   padding: 0 2rem;
 
   min-height: 100vh;
-
 }
 
 /* set scrollbar in panel */
@@ -443,6 +445,8 @@ svg {
 
   font-size: 4.8rem;
   font-weight: 700;
+
+  width: 100%;
 }
 
 .text-input:focus {
@@ -464,6 +468,54 @@ svg {
   color: blueviolet;
 }
 
+/* FOR NOTIFYING USERS TO USE LANDSCAPE VIEW */
+.orient-device {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  z-index: 9;
+  background-color: hsl(0, 0%, 8%);
+  height: 12rem;
+  width: 12rem;
+  padding: 2.4rem 2.4rem;
+  border-radius: 50%;
+  border: hsl(0, 0%, 45%) 1px dotted;
+}
+
+.center-svg {
+  max-width: fit-content;
+  margin: 0 auto;
+}
+
+.text-align-center {
+  text-align: center;
+}
+
+@media screen and (orientation: landscape) {
+  .orient-device {
+    display: none;
+
+    /* ALLOWS TRANSITIONS */
+    /* opacity: 0;
+    pointer-events: none;
+    visibility: hidden; */
+  }
+}
+
+/* MAX-WIDTH MEDIA QUERIES */
+
+@media (max-width: 820px) {
+  html {
+    font-size: 48%;
+  }
+}
+
+@media (max-width: 620px) {
+  html {
+    font-size: 36%;
+  }
+}
 
 
 
