--- a/src/main.css
+++ b/src/main.css
@@ -476,10 +476,8 @@ svg {
   transform: translate(-50%,-50%);
   z-index: 9;
   background-color: hsl(0, 0%, 8%);
-  height: 12rem;
-  width: 12rem;
-  padding: 2.4rem 2.4rem;
-  border-radius: 50%;
+  padding: 3.2rem 3.2rem;
+  border-radius: 3px;
   border: hsl(0, 0%, 45%) 1px dotted;
 }
 
@@ -495,11 +493,6 @@ svg {
 @media screen and (orientation: landscape) {
   .orient-device {
     display: none;
-
-    /* ALLOWS TRANSITIONS */
-    /* opacity: 0;
-    pointer-events: none;
-    visibility: hidden; */
   }
 }
 
